--- a/.gitignore
+++ b/.gitignore
@@ -166,5 +166,20 @@ logs/
 .ruff_cache/
 results/
 
+# C++ build files and directories
+src/shades/cpp/
+*.cpp
+*.hpp
+*.h
+*.cc
+*.cxx
+CMakeLists.txt
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+*.cmake
+!CMakeLists.txt.user
+
 # Claude
 # CLAUDE.md
