--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=65.0", "wheel"]
+requires = ["setuptools>=65.0", "wheel", "pybind11>=2.10.0", "cmake>=3.15"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -36,6 +36,7 @@ dependencies = [
     "qiskit-algorithms>=0.3.0",
     "stim>=1.12.0",
     "qulacs>=0.6.0",
+    "pybind11>=2.10.0",
 ]
 
 [project.optional-dependencies]
