--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "qiskit-algorithms>=0.3.0",
     "stim>=1.12.0",
     "qulacs>=0.6.0",
+    "block2>=0.5.3",
 ]
 
 [project.optional-dependencies]
